# Linear-Programming

./: CMakeLists.txt  README.md
doc/: report.tex
include/: constraint.hpp  problem.hpp  variable.hpp
src/: constraint.cpp  main.cpp  problem.cpp  variable.cpp
